# gpge

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  main.cpp
include/: shader.h  test.h
src/: main.cpp  main.old.cpp  shader.cpp  test.cpp
